--- a/StatusBarTranslator/Base.lproj/MainMenu.xib
+++ b/StatusBarTranslator/Base.lproj/MainMenu.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6233" systemVersion="14A329f" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14B23" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6233"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -11,9 +11,10 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target">
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="StatusBarTranslator" customModuleProvider="target">
             <connections>
-                <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
+                <outlet property="popover" destination="tA5-5y-JHy" id="d9T-0p-PD3"/>
+                <outlet property="popoverViewController" destination="78C-eH-yc4" id="pWq-CM-SBw"/>
             </connections>
         </customObject>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
@@ -666,15 +667,67 @@
                 </menuItem>
             </items>
         </menu>
-        <window title="StatusBarTranslator" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="480" height="360"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1177"/>
-            <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
-                <autoresizingMask key="autoresizingMask"/>
-            </view>
-        </window>
+        <viewController id="78C-eH-yc4" userLabel="Popover View Controller">
+            <connections>
+                <outlet property="view" destination="G4t-st-JY7" id="gaB-X3-kIS"/>
+            </connections>
+        </viewController>
+        <popover id="tA5-5y-JHy">
+            <connections>
+                <outlet property="contentViewController" destination="78C-eH-yc4" id="MB8-4t-AN3"/>
+            </connections>
+        </popover>
+        <customView id="G4t-st-JY7" customClass="TranslatorView" customModule="StatusBarTranslator" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="233" height="97"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <subviews>
+                <textField verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eCP-OT-gcB">
+                    <rect key="frame" x="20" y="35" width="193" height="22"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="Sov-I9-3Ct">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                    <connections>
+                        <outlet property="delegate" destination="G4t-st-JY7" id="3ai-pK-Wu2"/>
+                    </connections>
+                </textField>
+                <progressIndicator horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="578-PQ-ciq">
+                    <rect key="frame" x="108" y="11" width="16" height="16"/>
+                </progressIndicator>
+                <segmentedControl verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B0U-vI-HCn">
+                    <rect key="frame" x="19" y="64" width="195" height="20"/>
+                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="roundRect" trackingMode="selectOne" id="tee-1Y-r67">
+                        <font key="font" metaFont="cellTitle"/>
+                        <segments>
+                            <segment label="en-fr" width="94"/>
+                            <segment label="fr-en" width="94" selected="YES" tag="1"/>
+                        </segments>
+                    </segmentedCell>
+                    <connections>
+                        <action selector="modeChanged:" target="G4t-st-JY7" id="VPS-cf-aBG"/>
+                    </connections>
+                </segmentedControl>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wJ0-ou-b5v">
+                    <rect key="frame" x="18" y="5" width="196" height="22"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="justified" title="Label" id="AZJ-fs-dfz">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+            </subviews>
+            <constraints>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="eCP-OT-gcB" secondAttribute="trailing" constant="20" id="O94-Kl-nhI"/>
+                <constraint firstItem="eCP-OT-gcB" firstAttribute="leading" secondItem="G4t-st-JY7" secondAttribute="leading" constant="20" id="Quq-zb-d0k"/>
+                <constraint firstAttribute="trailing" secondItem="eCP-OT-gcB" secondAttribute="trailing" constant="20" id="fnx-WO-RAC"/>
+            </constraints>
+            <connections>
+                <outlet property="progressIndicator" destination="578-PQ-ciq" id="XBt-JT-gdo"/>
+                <outlet property="resultLabel" destination="wJ0-ou-b5v" id="jzM-bK-5d5"/>
+                <outlet property="textField" destination="eCP-OT-gcB" id="ZzN-9s-eVI"/>
+            </connections>
+            <point key="canvasLocation" x="389.5" y="-16.5"/>
+        </customView>
     </objects>
 </document>
